replacing repo